@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     05/11/2007
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2007-2008 Mattia Barbon
+## Copyright:   (c) 2007-2009 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -45,3 +45,5 @@
 %typemap{wxDataViewTreeStore*}{simple};
 %typemap{const wxDataViewTreeStore*}{simple};
 %typemap{wxDataViewTreeCtrl*}{simple};
+%typemap{wxDataViewListStore*}{simple};
+%typemap{const wxDataViewListStore*}{simple};
